// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField should render component with disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c6 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  cursor: not-allowed;
  overflow: visible;
  width: 20px;
  height: 20px;
  flex: 0 0 auto;
}

fieldset[data-dimension='s'] .c1 {
  width: 16px;
}

fieldset[data-dimension='s'] .c1 {
  height: 16px;
}

.c5 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: var(--admiral-border-radius-Small, 4px);
  outline: 0;
  transition: background-color 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c3 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: var(--admiral-border-radius-Small, 4px);
  margin: 0;
  padding: 0;
}

.c3 ::-ms-check {
  display: none;
}

.c3:checked+.c4 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: none;
}

.c3:checked:disabled+.c4 {
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  border: none;
}

.c3:checked:disabled+.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c3:not(:checked)+.c4 >* {
  display: none;
}

.c3:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c3:disabled+.c4 {
  border: 1px solid var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c3:hover:not(:disabled)::after,
.c3:focus:not(:disabled)+.c3:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c3:active:not(:disabled):not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3:focus-visible {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c0 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: not-allowed;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c0.c0 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c2 {
  margin-top: 2px;
}

<body>
    <div>
      <label
        class="c0"
        data-field-id="checkboxField"
        disabled=""
      >
        <div
          class="c1 c2"
        >
          <input
            class="c3"
            data-testid="element"
            disabled=""
            id="checkboxField"
            type="checkbox"
          />
          <div
            class="c4 c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </div>
        </div>
        <div
          class="c7"
          disabled=""
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c6 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  cursor: not-allowed;
  overflow: visible;
  width: 20px;
  height: 20px;
  flex: 0 0 auto;
}

fieldset[data-dimension='s'] .c1 {
  width: 16px;
}

fieldset[data-dimension='s'] .c1 {
  height: 16px;
}

.c5 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: var(--admiral-border-radius-Small, 4px);
  outline: 0;
  transition: background-color 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c3 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: var(--admiral-border-radius-Small, 4px);
  margin: 0;
  padding: 0;
}

.c3 ::-ms-check {
  display: none;
}

.c3:checked+.c4 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: none;
}

.c3:checked:disabled+.c4 {
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  border: none;
}

.c3:checked:disabled+.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c3:not(:checked)+.c4 >* {
  display: none;
}

.c3:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c3:disabled+.c4 {
  border: 1px solid var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c3:hover:not(:disabled)::after,
.c3:focus:not(:disabled)+.c3:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c3:active:not(:disabled):not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3:focus-visible {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c0 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: not-allowed;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c0.c0 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c2 {
  margin-top: 2px;
}

<div>
    <label
      class="c0"
      data-field-id="checkboxField"
      disabled=""
    >
      <div
        class="c1 c2"
      >
        <input
          class="c3"
          data-testid="element"
          disabled=""
          id="checkboxField"
          type="checkbox"
        />
        <div
          class="c4 c5"
        >
          <div
            aria-hidden="true"
            class="c6"
            focusable="false"
          />
        </div>
      </div>
      <div
        class="c7"
        disabled=""
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxField should render component with required properties 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c6 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  overflow: visible;
  width: 20px;
  height: 20px;
  flex: 0 0 auto;
}

fieldset[data-dimension='s'] .c1 {
  width: 16px;
}

fieldset[data-dimension='s'] .c1 {
  height: 16px;
}

.c5 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: var(--admiral-border-radius-Small, 4px);
  outline: 0;
  transition: background-color 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c3 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: var(--admiral-border-radius-Small, 4px);
  margin: 0;
  padding: 0;
}

.c3 ::-ms-check {
  display: none;
}

.c3:checked+.c4 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: none;
}

.c3:checked:disabled+.c4 {
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  border: none;
}

.c3:checked:disabled+.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c3:not(:checked)+.c4 >* {
  display: none;
}

.c3:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c3:disabled+.c4 {
  border: 1px solid var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c3:hover:not(:disabled)::after,
.c3:focus:not(:disabled)+.c3:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c3:active:not(:disabled):not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3:focus-visible {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c0 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset[data-dimension='s'] .c0.c0 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c2 {
  margin-top: 2px;
}

<body>
    <div>
      <label
        class="c0"
        data-field-id="checkboxField"
      >
        <div
          class="c1 c2"
        >
          <input
            class="c3"
            data-testid="element"
            id="checkboxField"
            type="checkbox"
          />
          <div
            class="c4 c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </div>
        </div>
        <div
          class="c7"
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c6 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  overflow: visible;
  width: 20px;
  height: 20px;
  flex: 0 0 auto;
}

fieldset[data-dimension='s'] .c1 {
  width: 16px;
}

fieldset[data-dimension='s'] .c1 {
  height: 16px;
}

.c5 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: var(--admiral-border-radius-Small, 4px);
  outline: 0;
  transition: background-color 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c3 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: var(--admiral-border-radius-Small, 4px);
  margin: 0;
  padding: 0;
}

.c3 ::-ms-check {
  display: none;
}

.c3:checked+.c4 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: none;
}

.c3:checked:disabled+.c4 {
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  border: none;
}

.c3:checked:disabled+.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c3:not(:checked)+.c4 >* {
  display: none;
}

.c3:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c3:disabled+.c4 {
  border: 1px solid var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c3:hover:not(:disabled)::after,
.c3:focus:not(:disabled)+.c3:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c3:active:not(:disabled):not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3:focus-visible {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c0 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset[data-dimension='s'] .c0.c0 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c2 {
  margin-top: 2px;
}

<div>
    <label
      class="c0"
      data-field-id="checkboxField"
    >
      <div
        class="c1 c2"
      >
        <input
          class="c3"
          data-testid="element"
          id="checkboxField"
          type="checkbox"
        />
        <div
          class="c4 c5"
        >
          <div
            aria-hidden="true"
            class="c6"
            focusable="false"
          />
        </div>
      </div>
      <div
        class="c7"
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxField should render component with small dimension 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c6 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  overflow: visible;
  width: 16px;
  height: 16px;
  flex: 0 0 auto;
}

fieldset[data-dimension='s'] .c1 {
  width: 16px;
}

fieldset[data-dimension='s'] .c1 {
  height: 16px;
}

.c5 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: var(--admiral-border-radius-Small, 4px);
  outline: 0;
  transition: background-color 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c3 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: var(--admiral-border-radius-Small, 4px);
  margin: 0;
  padding: 0;
}

.c3 ::-ms-check {
  display: none;
}

.c3:checked+.c4 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: none;
}

.c3:checked:disabled+.c4 {
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  border: none;
}

.c3:checked:disabled+.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c3:not(:checked)+.c4 >* {
  display: none;
}

.c3:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c3:disabled+.c4 {
  border: 1px solid var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c3:hover:not(:disabled)::after,
.c3:focus:not(:disabled)+.c3:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c3:active:not(:disabled):not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3:focus-visible {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c0 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset[data-dimension='s'] .c0.c0 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c2 {
  margin-top: 2px;
}

<body>
    <div>
      <label
        class="c0"
        data-field-id="checkboxField"
      >
        <div
          class="c1 c2"
        >
          <input
            class="c3"
            data-testid="element"
            id="checkboxField"
            type="checkbox"
          />
          <div
            class="c4 c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </div>
        </div>
        <div
          class="c7"
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c6 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  overflow: visible;
  width: 16px;
  height: 16px;
  flex: 0 0 auto;
}

fieldset[data-dimension='s'] .c1 {
  width: 16px;
}

fieldset[data-dimension='s'] .c1 {
  height: 16px;
}

.c5 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: var(--admiral-border-radius-Small, 4px);
  outline: 0;
  transition: background-color 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

.c5 *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c3 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: var(--admiral-border-radius-Small, 4px);
  margin: 0;
  padding: 0;
}

.c3 ::-ms-check {
  display: none;
}

.c3:checked+.c4 {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: none;
}

.c3:checked:disabled+.c4 {
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  border: none;
}

.c3:checked:disabled+.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c3:not(:checked)+.c4 >* {
  display: none;
}

.c3:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c3:disabled+.c4 {
  border: 1px solid var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c3:hover:not(:disabled)::after,
.c3:focus:not(:disabled)+.c3:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c3:active:not(:disabled):not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: var(--admiral-color-Opacity_Press, #0000001F);
}

.c3:focus-visible {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c0 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset[data-dimension='s'] .c0.c0 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

.c7 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c7.c7 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c7.c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c2 {
  margin-top: 2px;
}

<div>
    <label
      class="c0"
      data-field-id="checkboxField"
    >
      <div
        class="c1 c2"
      >
        <input
          class="c3"
          data-testid="element"
          id="checkboxField"
          type="checkbox"
        />
        <div
          class="c4 c5"
        >
          <div
            aria-hidden="true"
            class="c6"
            focusable="false"
          />
        </div>
      </div>
      <div
        class="c7"
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
